--- a/4.2 整数规划.ipynb
+++ b/4.2 整数规划.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "---\n",
     "### 4.2.1  整数线性规划模型\n",
-    "> 下面均为0-1规划模型\n",
+    "> 下面均为0-1规划模型ooo\n",
     "#### 1. 背包问题\n",
     "$$\n",
     "\\begin{align*}\n",
