change output order

--- a/2.7 scipy.ipynb
+++ b/2.7 scipy.ipynb
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -190,7 +190,7 @@
        "           x: array([149.50894334, 359.9847955 ])"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -198,7 +198,7 @@
    "source": [
     "import numpy as np\n",
     "from scipy.optimize import least_squares\n",
-    "a = np.loadtxt('/mnt/d/MaMo/model/Python数学建模算法与应用程序和数据/02第2章  Python使用入门/data2_47.txt')\n",
+    "a = np.loadtxt('../02第2章  Python使用入门/data2_47.txt')\n",
     "x0, y0, d = a[0], a[1], a[2]\n",
     "fx = lambda x: np.sqrt((x0 - x[0])**2 + (y0 - x[1])**2) - d\n",
     "least_squares(fx, [200, 200])"
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -218,7 +218,7 @@
        "        [-8.16496581e-01,  4.65265867e-17,  5.77350269e-01]]))"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -232,19 +232,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "(array([9.+0.j]),\n",
-       " array([[-0.40824829+0.j],\n",
-       "        [-0.40824829+0.j],\n",
-       "        [-0.81649658+0.j]]))"
+       " array([[0.40824829+0.j],\n",
+       "        [0.40824829+0.j],\n",
+       "        [0.81649658+0.j]]))"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
