--- a/4.4 比赛项目排序问题.ipynb
+++ b/4.4 比赛项目排序问题.ipynb
@@ -233,7 +233,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> 所取的infty不同，最终结果居然也不同"
+    "> 所取的infty不同，最终结果居然也不同\n",
+    "> \n",
+    "> ***！！注意 ！！***\n",
+    "> \n",
+    "> 因为cvxpy求解规划问题本质是在做数值计算，所以如果infty取得过大可能导致其他变量的值被舍去，因此定义infty时只需比其他值大2~3个数量级即可"
    ]
   }
  ],
