--- a/4 hw.ipynb
+++ b/4 hw.ipynb
@@ -456,6 +456,196 @@
     "prob.solve(solver='SCIP')\n",
     "print(f'最优解为：{x.value}'), print(f'最优值为：{prob.value}')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 8\n",
+    "背包问题"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "最优解为：[[ 0.          0.          0.        ]\n",
+      " [ 7.          0.          8.        ]\n",
+      " [ 3.         12.94736842  0.        ]\n",
+      " [ 0.          3.05263158  0.        ]]\n",
+      "最优值为：121515.78947368423\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(None, None)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "w = np.array([18,15,23,12])\n",
+    "v = np.array([480,650,580,390])\n",
+    "p = np.array([3100,3800,3500,2850])\n",
+    "W = np.array([10,16,8])\n",
+    "V = np.array([6800,8700,5300])\n",
+    "\n",
+    "x = cp.Variable((4,3), nonneg=True)\n",
+    "obj = cp.Maximize(p @ cp.sum(x, axis=1))\n",
+    "ws = (w @ x)\n",
+    "cons = [\n",
+    "    cp.sum(x, axis=0) <= W,\n",
+    "    cp.sum(x, axis=1) <= w,\n",
+    "    v @ x <= V,\n",
+    "    cp.sum(x[:, 0])/10 == cp.sum(x[:, 1])/16,\n",
+    "    cp.sum(x[:, 1])/16 == cp.sum(x[:, 2])/8,\n",
+    "]\n",
+    "prob = cp.Problem(obj, cons)\n",
+    "prob.solve(solver='SCIP')\n",
+    "print(f'最优解为：{x.value}'), print(f'最优值为：{prob.value}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 9\n",
+    "钢管下料问题\n",
+    "1. 确定所有合理可行的切割模式"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([[0, 0, 6],\n",
+       "        [0, 1, 4],\n",
+       "        [0, 2, 2],\n",
+       "        [0, 3, 0],\n",
+       "        [1, 0, 4],\n",
+       "        [1, 1, 1],\n",
+       "        [2, 0, 1]]),\n",
+       " array([0.9, 0.8, 0.7, 0.6, 0. , 0.9, 0.1]))"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "L = 6.9\n",
+    "l = [2.9, 2.1, 1]\n",
+    "demand = [100, 100, 100]\n",
+    "mode = []\n",
+    "r = []\n",
+    "for i in range(int(np.ceil(L/l[0]))):\n",
+    "    for j in range(int(np.ceil(L/l[1]))):\n",
+    "        for k in range(int(np.ceil(L/l[2]))):\n",
+    "            length = i*l[0] + j*l[1] + k*l[2]\n",
+    "            if length > L - min(l) and length <= L:\n",
+    "                mode.append([i, j, k])\n",
+    "                r.append(L - length)\n",
+    "\n",
+    "mode = np.array(mode)\n",
+    "r = np.array(r)\n",
+    "\n",
+    "mode, r"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2. 规划\n",
+    "\n",
+    "用 $x_{i }$ 表示按照第 $i$ 种模式 $i = 1, 2,\\cdots,7$ 切割的原料钢管的根数，以使用的原材料最少为目标"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "最优解为：[ 0.  1.  0. 33. 14.  0. 43.]\n",
+      "最优值为：91.0\n",
+      "余料长度为：24.900000000000013\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = cp.Variable(len(mode), integer=True)\n",
+    "obj = cp.Minimize(cp.sum(x))\n",
+    "cons = [\n",
+    "    x @ mode >= demand,\n",
+    "    x >= 0,\n",
+    "]\n",
+    "prob = cp.Problem(obj, cons)\n",
+    "prob.solve(solver='GUROBI')\n",
+    "print(f'最优解为：{x.value}')\n",
+    "print(f'最优值为：{prob.value}')\n",
+    "print(f'余料长度为：{r @ x.value}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "附加题：若下料方式不超过三种\n",
+    "\n",
+    "$y_i$ 表示是否采用了第 $i$ 种下料方式"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "最优解为：[-0. -0. -0. 34. 15. -0. 43.]\n",
+      "最优值为：92.0\n",
+      "余料长度为：24.70000000000001\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = cp.Variable(len(mode), integer=True)\n",
+    "y = cp.Variable(len(mode), integer=True)\n",
+    "infty = 1e4\n",
+    "obj = cp.Minimize(cp.sum(x))\n",
+    "cons = [\n",
+    "    x @ mode >= demand,\n",
+    "    x <= infty*y,\n",
+    "    cp.sum(y) <= 3,\n",
+    "    x >= 0,\n",
+    "    0 <= y, y <= 1,\n",
+    "]\n",
+    "prob = cp.Problem(obj, cons)\n",
+    "prob.solve(solver='GUROBI')\n",
+    "print(f'最优解为：{x.value}')\n",
+    "print(f'最优值为：{prob.value}')\n",
+    "print(f'余料长度为：{r @ x.value}')"
+   ]
   }
  ],
  "metadata": {
