--- a/5.1 非线性规划概念和理论.ipynb
+++ b/5.1 非线性规划概念和理论.ipynb
@@ -47,8 +47,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "最优解为：[0.55364389 1.30652155]\n",
-      "最优值为：3.79894455278892\n"
+      "最优解为：[0.55345671 1.30631433]\n",
+      "最优值为：3.798944619145067\n"
      ]
     },
     {
@@ -73,8 +73,16 @@
     "    x[0]**2 - x[1] + 1 <= 0,\n",
     "]\n",
     "prob = cp.Problem(obj, cons)\n",
-    "prob.solve(solver='CVXOPT')\n",
+    "prob.solve(solver='GUROBI')\n",
     "print(f'最优解为：{x.value}'), print(f'最优值为：{prob.value}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 库恩-塔克条件 (K-T 条件)\n",
+    "若 $\\boldsymbol x$ 满足库恩-塔克条件，则 $\\boldsymbol x$ 必为凸规划的局部最优解，进而为全局最优解"
    ]
   }
  ],
