--- a/5.3 二次规划模型.ipynb
+++ b/5.3 二次规划模型.ipynb
@@ -77,7 +77,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 投资组合 (portfolio) 问题"
+    "### 投资组合 (portfolio) 问题\n",
+    "投资风险为总收益的方差，计算公式\n",
+    "$$\n",
+    "{\\rm Var}\\left(\\sum_{i=1}^nx_iR_i\\right)=\\sum\\limits_{i=1}^nx_i^2{\\rm Var}\\left(R_i\\right)+\\sum\\limits_{i,j\\,:\\,i<j}2x_ix_j{\\rm Cov}\\left(R_i, R_j\\right)\n",
+    "$$\n",
+    "其中 $x_i$ 为在第 $i$ 种股票上的投资额 / 投资比例 / 投资股数，$R_i$ 为第 $i$ 种股票的收益率 (每股股票的期望收益与市价的比值)。公式的矩阵形式如下\n",
+    "$$\n",
+    "{\\rm Var}(R)= {\\boldsymbol x}\n",
+    "\t\\begin{bmatrix}\n",
+    "\t{\\rm Cov}\\left(R_1, R_1\\right) &{\\rm Cov}\\left(R_1, R_2\\right) &\\cdots &{\\rm Cov}\\left(R_1, R_n\\right)\\\\\n",
+    "\t{\\rm Cov}\\left(R_2, R_1\\right) &{\\rm Cov}\\left(R_2, R_2\\right) &\\cdots &{\\rm Cov}\\left(R_2, R_n\\right)\\\\\n",
+    "\t\\vdots &\\vdots & &\\vdots\\\\\n",
+    "\t{\\rm Cov}\\left(R_n, R_1\\right) &{\\rm Cov}\\left(R_n, R_2\\right) &\\cdots &{\\rm Cov}\\left(R_n, R_n\\right)\\\\\n",
+    "\t\\end{bmatrix}\n",
+    "{\\boldsymbol x}^{\\rm T}\n",
+    "$$\n",
+    "实际上， ${\\rm Cov}(R_i, R_i) = {\\rm Var}(R_i)$"
    ]
   },
   {
