--- a/6.3 最短路算法.ipynb
+++ b/6.3 最短路算法.ipynb
@@ -253,7 +253,7 @@
     }
    ],
    "source": [
-    "Adjt = [(1, 3, 10), (1, 4, 60), (2, 3, 5), (2, 4, 20), (3, 4, 1)]\n",
+    "Adjt = [(1,3,10), (1,4,60), (2,3,5), (2,4,20), (3,4,1)]\n",
     "G = nx.Graph()\n",
     "G.add_nodes_from(range(1, 5))\n",
     "G.add_weighted_edges_from(Adjt)\n",
