--- a/6.5 着色问题.ipynb
+++ b/6.5 着色问题.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -47,7 +47,7 @@
        "       [1., 1., 1., 1., 1., 0.]])"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +101,7 @@
        "5"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +128,10 @@
       " [-0.  1. -0. -0. -0. -0.]\n",
       " [ 1. -0. -0. -0. -0. -0.]\n",
       " [-0. -0. -0.  1. -0. -0.]]\n",
-      "最优值为：4.0\n"
+      "最优值为：4.0\n",
+      "顶点和颜色的对应关系如下：\n",
+      "顶点:\t[1 2 3 4 5 6]\n",
+      "颜色：\t[2 1 3 2 1 4]\n"
      ]
     }
    ],
@@ -149,7 +152,10 @@
     "\n",
     "prob = cp.Problem(obj, cons)\n",
     "prob.solve(solver='GUROBI')\n",
-    "print(f'最优解为：\\n{x.value}'); print(f'最优值为：{prob.value}')"
+    "print(f'最优解为：\\n{x.value}'); print(f'最优值为：{prob.value}')\n",
+    "i, k = np.nonzero(x.value)\n",
+    "print(\"顶点和颜色的对应关系如下：\")\n",
+    "print(\"顶点:\", i+1, sep='\\t'); print(\"颜色：\", k+1, sep='\\t')"
    ]
   }
  ],
