set folder & adjust file path

--- a/2 Python 使用入门/2.7 scipy.ipynb
+++ b/2 Python 使用入门/2.7 scipy.ipynb
@@ -198,7 +198,7 @@
    "source": [
     "import numpy as np\n",
     "from scipy.optimize import least_squares\n",
-    "a = np.loadtxt('../02第2章  Python使用入门/data2_47.txt')\n",
+    "a = np.loadtxt('../../02第2章  Python使用入门/data2_47.txt')\n",
     "x0, y0, d = a[0], a[1], a[2]\n",
     "fx = lambda x: np.sqrt((x0 - x[0])**2 + (y0 - x[1])**2) - d\n",
     "least_squares(fx, [200, 200])"
