--- a/3 线性代数模型/3.2 矩阵的奇异值分解及应用.ipynb
+++ b/3 线性代数模型/3.2 矩阵的奇异值分解及应用.ipynb
@@ -313,7 +313,7 @@
    ],
    "source": [
     "personNum, dishNum = 18, 11\n",
-    "data = np.loadtxt('../03第3章  线性代数模型/data3_6_1.txt')\n",
+    "data = np.loadtxt('../../03第3章  线性代数模型/data3_6_1.txt')\n",
     "normalizedCorrelation = 0.5 + np.corrcoef(data.T)*0.5  # np.corrcoef() 按行返回原矩阵(m*n)的相关系数矩阵(m*m)\n",
     "df = pd.DataFrame(normalizedCorrelation, columns=range(dishNum), index=range(dishNum))\n",
     "df"
@@ -710,7 +710,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pic = Image.open('../03第3章  线性代数模型/Lena.bmp')\n",
+    "pic = Image.open('../../03第3章  线性代数模型/Lena.bmp')\n",
     "if pic.mode != 'L':\n",
     "    pic =  pic.convert('L')     # 转换为灰度图像\n",
     "pix = np.array(pic).astype(float)\n",
