--- a/4 线性规划和整数规划模型/4 hw.ipynb
+++ b/4 线性规划和整数规划模型/4 hw.ipynb
@@ -199,7 +199,7 @@
    "source": [
     "n = 6\n",
     "x = cp.Variable((n, n), integer=True)\n",
-    "C = pd.read_csv('../../hw/04第4章  线性规划和整数规划模型习题解答/ti4_5.txt', header=None)\n",
+    "C = pd.read_csv('../../../hw/04第4章  线性规划和整数规划模型习题解答/ti4_5.txt', header=None)\n",
     "C = np.array(C).reshape(n, n)\n",
     "C"
    ]
@@ -292,7 +292,7 @@
     }
    ],
    "source": [
-    "df = pd.read_csv('../../hw/04第4章  线性规划和整数规划模型习题解答/ti4_6_1.txt', sep='\\t', header=None)\n",
+    "df = pd.read_csv('../../../hw/04第4章  线性规划和整数规划模型习题解答/ti4_6_1.txt', sep='\\t', header=None)\n",
     "C = df.values\n",
     "demand = C[:, -1][:-1]\n",
     "reserve = C[-1, :][:-1]\n",
@@ -434,7 +434,7 @@
     }
    ],
    "source": [
-    "df = pd.read_csv('../../hw/04第4章  线性规划和整数规划模型习题解答/ti4_7.txt', sep='\\t', header=None)\n",
+    "df = pd.read_csv('../../../hw/04第4章  线性规划和整数规划模型习题解答/ti4_7.txt', sep='\\t', header=None)\n",
     "C = df.values\n",
     "(personNum, examNum) = C.shape\n",
     "x = cp.Variable(C.shape, pos=True)\n",
