--- a/4 线性规划和整数规划模型/4.1 线性规划模型.ipynb
+++ b/4 线性规划和整数规划模型/4.1 线性规划模型.ipynb
@@ -215,9 +215,9 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "\n",
-    "cost = np.genfromtxt('../04第4章  线性规划和整数规划模型/data4_5_1.txt', dtype=float, max_rows=6, usecols=range(8))\n",
-    "sales = np.genfromtxt('../04第4章  线性规划和整数规划模型/data4_5_1.txt', dtype=float, skip_header=6)\n",
-    "production = np.genfromtxt('../04第4章  线性规划和整数规划模型/data4_5_1.txt', dtype=float, max_rows=6, usecols=8)\n",
+    "cost = np.genfromtxt('../../04第4章  线性规划和整数规划模型/data4_5_1.txt', dtype=float, max_rows=6, usecols=range(8))\n",
+    "sales = np.genfromtxt('../../04第4章  线性规划和整数规划模型/data4_5_1.txt', dtype=float, skip_header=6)\n",
+    "production = np.genfromtxt('../../04第4章  线性规划和整数规划模型/data4_5_1.txt', dtype=float, max_rows=6, usecols=8)\n",
     "# However, it is much easier to use .csv or .xlsx\n",
     "\n",
     "x = cp.Variable((6,8), pos=True)\n",
