--- a/4 线性规划和整数规划模型/4.2 整数规划.ipynb
+++ b/4 线性规划和整数规划模型/4.2 整数规划.ipynb
@@ -138,7 +138,7 @@
     "import cvxpy as cp\n",
     "import numpy as np\n",
     "\n",
-    "cost = np.loadtxt('../04第4章  线性规划和整数规划模型/data4_10.txt')\n",
+    "cost = np.loadtxt('../../04第4章  线性规划和整数规划模型/data4_10.txt')\n",
     "x = cp.Variable((4,5), integer=True)\n",
     "obj = cp.Minimize(cp.sum(cp.multiply(cost, x)))\n",
     "cons = [\n",
@@ -199,7 +199,7 @@
     "import numpy as np\n",
     "from sklearn.metrics import euclidean_distances # 两个矩阵的成对平方欧氏距离\n",
     "\n",
-    "pos = np.loadtxt('../04第4章  线性规划和整数规划模型/data4_11.txt')\n",
+    "pos = np.loadtxt('../../04第4章  线性规划和整数规划模型/data4_11.txt')\n",
     "pos = pos.T\n",
     "d = euclidean_distances(pos, pos)\n",
     "d"
