--- a/4 线性规划和整数规划模型/4.4 比赛项目排序问题.ipynb
+++ b/4 线性规划和整数规划模型/4.4 比赛项目排序问题.ipynb
@@ -90,7 +90,7 @@
     }
    ],
    "source": [
-    "df = pd.read_excel('../04第4章  线性规划和整数规划模型/data4_13_1.xlsx', header=None)\n",
+    "df = pd.read_excel('../../04第4章  线性规划和整数规划模型/data4_13_1.xlsx', header=None)\n",
     "a = df.values\n",
     "a[np.isnan(a)] = 0\n",
     "a"
