--- a/5 非线性规划和多目标规划模型/5.3 二次规划模型.ipynb
+++ b/5 非线性规划和多目标规划模型/5.3 二次规划模型.ipynb
@@ -125,7 +125,7 @@
    ],
    "source": [
     "import pandas as pd\n",
-    "df = pd.read_csv('../05第5章  非线性规划和多目标规划模型/data5_4.txt', sep='\\t', header=None)\n",
+    "df = pd.read_csv('../../05第5章  非线性规划和多目标规划模型/data5_4.txt', sep='\\t', header=None)\n",
     "a = df.values\n",
     "a"
    ]
