--- a/5 非线性规划和多目标规划模型/5.4 非线性规划的求解和应用.ipynb
+++ b/5 非线性规划和多目标规划模型/5.4 非线性规划的求解和应用.ipynb
@@ -174,7 +174,7 @@
     "import pandas as pd\n",
     "from sklearn.metrics import euclidean_distances\n",
     "\n",
-    "df = pd.read_csv('../05第5章  非线性规划和多目标规划模型/data5_8.txt', header=None, sep='\\t')\n",
+    "df = pd.read_csv('../../05第5章  非线性规划和多目标规划模型/data5_8.txt', header=None, sep='\\t')\n",
     "data = df.values\n",
     "loc = np.array(data[:2]).T\n",
     "demand = data[2, :]\n",
