--- a/6 图论模型/6.6 最大流与最小费用流问题.ipynb
+++ b/6 图论模型/6.6 最大流与最小费用流问题.ipynb
@@ -297,7 +297,7 @@
     "&{\\rm s.t.}\n",
     "\t\\begin{cases}\n",
     "\t\\sum\\limits_{\\left(v_s,v_j\\right)\\in A}f_{sj}=v,\\\\\n",
-    "\t\\sum\\limits_{j:\\left(v_i,v_j\\right)\\in A}f_{ij}-\\sum\\limits_{k:\\left(v_i,v_j\\right)\\in A}f_{kj}=0,\\quad i\\neq s,t,\\\\\n",
+    "\t\\sum\\limits_{j:\\left(v_i,v_j\\right)\\in A}f_{ij}-\\sum\\limits_{k:\\left(v_k,v_i\\right)\\in A}f_{ki}=0,\\quad i\\neq s,t,\\\\\n",
     "\t\\sum\\limits_{k:\\left(v_k,v_t\\right)\\in A}f_{kt}=v,\\\\\n",
     "\t0\\leq f_{ij}\\leq c_{ij},\\quad\\forall\\left(v_i,v_j\\right)\\in A.\n",
     "    \\end{cases}\n",
