--- a/6 图论模型/6.3 最短路算法.ipynb
+++ b/6 图论模型/6.3 最短路算法.ipynb
@@ -352,8 +352,8 @@
    "source": [
     "W[np.isinf(W)] = 0\n",
     "G = nx.DiGraph(W)\n",
-    "path = nx.shortest_path(G, 0, 5, weight='weight') \n",
-    "dis = nx.shortest_path_length(G, 0, 5, weight='weight')\n",
+    "path = nx.shortest_path(G, 0, year_num, weight='weight') \n",
+    "dis = nx.shortest_path_length(G, 0, year_num, weight='weight')\n",
     "print(\"应当在以下年份购置新设备\", np.array(path[:-1]) + 1)\n",
     "print(\"最少费用\", dis)"
    ]
