--- a/6 图论模型/6.7 关键路径.ipynb
+++ b/6 图论模型/6.7 关键路径.ipynb
@@ -413,12 +413,13 @@
     }
    ],
    "source": [
+    "n = 8\n",
     "L = [(1,2,5,5,0), (1,3,10,8,700), (1,4,11,8,400), (2,5,4,3,450), (3,4,4,4,0),\n",
     "    (3,5,0,0,0), (4,6,15,15,0), (5,6,21,16,600), (5,7,25,22,300),\n",
     "    (5,8,35,30,500), (6,7,0,0,0), (6,8,20,16,500), (7,8,15,12,400)] # (i,j,t,m,c)\n",
     "d = 49\n",
-    "x = cp.Variable(8, nonneg=True)\n",
-    "y = cp.Variable((8,8), integer=True)\n",
+    "x = cp.Variable(n, nonneg=True)\n",
+    "y = cp.Variable((n,n), integer=True)\n",
     "fun = 0\n",
     "for k in range(len(L)):\n",
     "    i, j, c = L[k][0]-1, L[k][1]-1, L[k][4]\n",
@@ -768,7 +769,7 @@
    ],
    "source": [
     "n = 8\n",
-    "x = cp.Variable((n,n), boolean=True)\n",
+    "x = cp.Variable((n,n), boolean=True)    # x_ij 是否在关键路径上\n",
     "fun = 0\n",
     "for k in range(len(L)):\n",
     "    i, j = L[k][0]-1, L[k][1]-1\n",
@@ -786,7 +787,7 @@
     "    cons.append(cp.sum(x[k-1, out]) - cp.sum(x[inn, k-1]) == 0)\n",
     "prob = cp.Problem(obj, cons)\n",
     "prob.solve(solver='GUROBI')\n",
-    "print('最优值为：', prob.value); print('最优解为:\\n', x.value)"
+    "print('工期的数学期望为：', prob.value); print('关键路径为:\\n', x.value)"
    ]
   },
   {
