--- a/3 线性代数模型/3.2 矩阵的奇异值分解及应用.ipynb
+++ b/3 线性代数模型/3.2 矩阵的奇异值分解及应用.ipynb
@@ -6,14 +6,14 @@
    "source": [
     "---\n",
     "### 3.2.1 矩阵的奇异值分解\n",
-    "矩阵的$F$（Frobenius）范数定义为：\n",
+    "矩阵的$F$（Frobenius）范数 $\\left\\|\\boldsymbol A\\right\\|_F$ 定义为：\n",
     "$$\n",
     "\\begin{align*}\n",
-    "\\left\\|\\bm A\\right\\|_F^2 &={\\rm tr}\\left( {\\bm A^{\\rm T}{\\bm A}}{}\\right)=\\sum\\limits_{i=0}^m\\sum\\limits_{j=0}^na_{ij}\\\\\n",
+    "\\left\\|\\boldsymbol A\\right\\|_F^2 &={\\rm tr}\\left( {\\boldsymbol A^{\\rm T}{\\boldsymbol A}}{}\\right)=\\sum\\limits_{i=0}^m\\sum\\limits_{j=0}^na_{ij}\\\\\n",
     "&=\\sum\\limits_{i=1}^r\\sigma_i^2\n",
     "\\end{align*}\n",
     "$$\n",
-    "其中$\\sigma_i(i=1, 2, \\cdots, r)$为矩阵$\\bm A$的奇异值\n"
+    "其中$\\sigma_i(i=1, 2, \\cdots, r)$为矩阵$\\boldsymbol A$的奇异值\n"
    ]
   },
   {
@@ -678,7 +678,7 @@
     "#### 2. 利用 SVD 进行图像压缩\n",
     "用$k$个大奇异值及与之对应的左和右奇异向量逼近原图像，便可以用$m\\times k+k+k\\times n=k(m+n+1)$个数值代替原来的$m\\times n$个数据，压缩比率为$$\\rho=\\left(1-\\dfrac{k(m+n+1)}{mn} \\times 100\\% \\right) $$\n",
     "\n",
-    "在接收端，接收到奇异值$\\sigma_1, \\sigma_2, \\cdots, \\sigma_k$以及左奇异向量$\\bm u_1, \\bm u_2, \\cdots, \\bm u_k$和右奇异向量$\\bm v_1, \\bm v_2, \\cdots, \\bm v_k$后，即可通过以下的奇异值分解公式重构出原图像：$$\\hat {\\bm A}=\\sum\\limits_{i=1}^k \\sigma_i \\bm u_i \\bm v_i^{\\rm T}$$"
+    "在接收端，接收到奇异值$\\sigma_1, \\sigma_2, \\cdots, \\sigma_k$以及左奇异向量$\\boldsymbol u_1, \\boldsymbol u_2, \\cdots, \\boldsymbol u_k$和右奇异向量$\\boldsymbol v_1, \\boldsymbol v_2, \\cdots, \\boldsymbol v_k$后，即可通过以下的奇异值分解公式重构出原图像：$$\\hat {\\boldsymbol A}=\\sum\\limits_{i=1}^k \\sigma_i \\boldsymbol u_i \\boldsymbol v_i^{\\rm T}$$"
    ]
   },
   {
