--- a/8 常微分方程与差分方程/8.1 常微分方程问题的数学模型.ipynb
+++ b/8 常微分方程与差分方程/8.1 常微分方程问题的数学模型.ipynb
@@ -20,19 +20,7 @@
    "source": [
     "import numpy as np\n",
     "import sympy as sp\n",
-    "sp.init_printing(use_latex=True)\n",
-    "import matplotlib.pyplot as plt\n",
-    "plt.rcParams['font.sans-serif']=['Times New Roman + SimSun + WFM Sans SC']\n",
-    "plt.rcParams['mathtext.fontset']='stix'\n",
-    "# Times New Roman + SimSun + WFM Sans SC\n",
-    "# simsum宋体, times new roman -*, simhei黑体, kaiti楷体, \n",
-    "# dengxian等线, fangsong仿宋, Microsoft Yahei微软雅黑\n",
-    "plt.rcParams['axes.unicode_minus']=False   \n",
-    "plt.rcParams['figure.dpi'] = 200\n",
-    "# plt.rcParams['figure.figsize'] = [4, 3]\n",
-    "# plt.rcParams['font.size'] = 12\n",
-    "plt.rcParams['xtick.direction']='in'\n",
-    "plt.rcParams['ytick.direction']='in'"
+    "sp.init_printing(use_latex=True)"
    ]
   },
   {
