--- a/8 常微分方程与差分方程/8.3 常微分方程的解.ipynb
+++ b/8 常微分方程与差分方程/8.3 常微分方程的解.ipynb
@@ -237,7 +237,7 @@
     "```\n",
     "`func`：方程组的右侧 $y_1'(x), y_2'(x),\\cdots, y_m'(x)$\n",
     "\n",
-    "`y0`：函数初值 $y_1(0), y_2(0),\\cdots, y_m(0) $\n",
+    "`y0`：函数初值 $y_1(t_1), y_2(t_1),\\cdots, y_m(t_1) $，其中 $t_1$ 为自变量下限，如 $y(1)$ 就要生成一个从 $1$ 开始的范围\n",
     "\n",
     "`t`：自变量序列 $t_1, t_2, \\cdots, t_n$\n",
     "\n",
@@ -605,7 +605,7 @@
     "        y2,\n",
     "        2*y2 - y1 + np.exp(x)\n",
     "    ]\n",
-    "xx1 = np.linspace(0, -1, 51)    # odient解决的是初值问题，即y(0)=..，要求 t必须从0开始，所以需要在 0处断开\n",
+    "xx1 = np.linspace(0, -1, 51)    # 初值条件由自变量的下限确定，所以在生成自变量序列时一定从 0开始\n",
     "xx2 = np.linspace(0, 1, 51)\n",
     "ns1 = odeint(rhs, [1,-1], xx1)[:,0]  # 只保留 y1即可\n",
     "ns2 = odeint(rhs, [1,-1], xx2)[:,0]\n",
