--- a/9 数据的描述性统计方法/9.1 scipy.stats 模块简介.ipynb
+++ b/9 数据的描述性统计方法/9.1 scipy.stats 模块简介.ipynb
@@ -213,6 +213,59 @@
     "ax.vlines(x, 0, y, lw=2, alpha=0.5)     # ax.vlines(x, ymin, ymax)\n",
     "fig.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 4. 随机变量的概率计算和数字特征"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "c1 = 1.6510204996078366\n",
+      "c2 = 1.6510204996078366\n"
+     ]
+    }
+   ],
+   "source": [
+    "from scipy.stats import norm\n",
+    "from scipy.optimize import fsolve\n",
+    "\n",
+    "c1 = norm.ppf(0.25, 3, 2)\n",
+    "\n",
+    "cf = lambda c: 1 - norm.cdf(c, 3, 2) - 3*norm.cdf(c, 3, 2)\n",
+    "c2 = fsolve(cf, 1)[0]\n",
+    "\n",
+    "print(f'{c1 = }\\n{c2 = }')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array(3.), array(9.), array(2.), array(6.))"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "expon.stats(scale=3, moments='mvsk')"
+   ]
   }
  ],
  "metadata": {
