--- a/10 回归分析/10.2 多元线性回归.ipynb
+++ b/10 回归分析/10.2 多元线性回归.ipynb
@@ -56,8 +56,8 @@
     "\n",
     "fig = plt.figure()\n",
     "ax = fig.add_subplot(111)\n",
-    "ax.scatter(x1, y, marker='*', label='$x1$')\n",
-    "ax.scatter(x2, y, marker='^', label='$x2$')\n",
+    "ax.scatter(x1, y, marker='*', label='$x_1$')\n",
+    "ax.scatter(x2, y, marker='^', label='$x_2$')\n",
     "ax.legend()\n",
     "fig.show()"
    ]
