--- a/10 回归分析/10.5 广义线性回归模型.ipynb
+++ b/10 回归分析/10.5 广义线性回归模型.ipynb
@@ -391,7 +391,7 @@
     "的参数估计为 $\\hat\\beta_0,\\hat\\beta_1,\\cdots,\\hat\\beta_m$，则在 $x_1=x_{01},x_2=x_{02},\\cdots,x_m=x_{0m}$ 条件下事件赔率 (odds) 的估计值为\n",
     "$$\\dfrac{\\hat p_0}{1-\\hat p_0}={\\rm e}^{\\hat\\beta_0+\\sum\\limits_{j=1}^m\\hat\\beta_jx_{0j}}$$\n",
     "如果记 $\\boldsymbol X_A=\\left[1,x_{A1},x_{A2},\\cdots,x_{Am}\\right]^{\\rm T}$，$\\boldsymbol X_B=\\left[1,x_{B1},x_{B2},\\cdots,x_{Bm}\\right]^{\\rm T}$，并将相应条件下的事件仍记为 $\\boldsymbol X_A, \\boldsymbol X_B$，则事件 $\\boldsymbol X_A$ 对 $\\boldsymbol X_B$ 赔率比的估计可由下式获得\n",
-    "$${\\rm OR}\\left(\\boldsymbol X_A, \\boldsymbol X_B\\right)={\\rm e}^{\\sum\\limits_{j=1}^m\\hat\\beta_j\\left(x_{Aj}x_{Bj}\\right)}$$"
+    "$${\\rm OR}\\left(\\boldsymbol X_A, \\boldsymbol X_B\\right)={\\rm e}^{\\sum\\limits_{j=1}^m\\hat\\beta_j\\left(x_{Aj}-x_{Bj}\\right)}$$"
    ]
   },
   {
