--- a/14 综合评价方法/14.3 常用的综合评价数学模型.ipynb
+++ b/14 综合评价方法/14.3 常用的综合评价数学模型.ipynb
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -142,6 +142,16 @@
       "TOPSIS 排名(降序):\n",
       "[3 1 2 4]\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([2, 3, 1, 4])"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -154,7 +164,8 @@
     "print(\"TOPSIS 评价值：\\n\", np.round(score, 4), sep='')\n",
     "\n",
     "rank = np.arange(1, len(B)+1)[np.argsort(-score)]\n",
-    "print(\"\\nTOPSIS 排名(降序):\\n\", rank, sep='')"
+    "print(\"\\nTOPSIS 排名(降序):\\n\", rank, sep='')\n",
+    "np.arange(1, 5)[np.argsort(np.argsort(-score))]"
    ]
   },
   {
