--- a/14 综合评价方法/14.2 综合评价数据处理.ipynb
+++ b/14 综合评价方法/14.2 综合评价数据处理.ipynb
@@ -233,6 +233,7 @@
     }
    ],
    "source": [
+    "# 第四列数据错误，有极小型指标时不建议使用 sklearn\n",
     "from sklearn import preprocessing\n",
     "scaler = preprocessing.MinMaxScaler(feature_range=(0, 1)).fit(data)\n",
     "data_scaled = scaler.transform(data)\n",
